获取页面跳转参数 获取个人计划列表 老师评价计划

--- a/public/views/renwu.html
+++ b/public/views/renwu.html
@@ -146,208 +146,10 @@ Purchase: http://wrapbootstrap.com
                                     <td>131311</td>
                                     <td>2015</td>
                                     <td>15052313</td>
-                                    <td class="scrollNav"><a  href="#pingjia" class="btn btn-success btn-xs commetD"><i class="fa fa-share"></i>评价详情</a></td>
-                                    <td class="center "><a href="taskList.html" class="btn btn-success btn-xs edit"><i class="fa fa-share"></i>开会记录</a></td>
+                                    <td class="scrollNav"><a  href="#pingjia" data-mode="" class="btn btn-success btn-xs commetD"><i class="fa fa-share"></i>评价详情</a></td>
+                                    <td class="center "><a href="javascript:;" data-mode="1"  class="btn btn-success btn-xs edit"><i class="fa fa-share"></i>开会记录</a></td>
                                     <td>
-                                        <a href="planList.html" class="btn btn-primary btn-xs more"><i class="fa fa-share"></i>计划详情 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td class="scrollNav"><a  href="#pingjia" class="btn btn-success btn-xs commetD"><i class="fa fa-share"></i>评价详情</a></td>
-                                    <td class="center "><a href="taskList.html" class="btn btn-success btn-xs edit"><i class="fa fa-share"></i>开会记录</a></td>
-                                    <td>
-                                        <a href="planList.html" class="btn btn-primary btn-xs more"><i class="fa fa-share"></i>计划详情 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td class="scrollNav"><a  href="#pingjia" class="btn btn-success btn-xs commetD"><i class="fa fa-share"></i>评价详情</a></td>
-                                    <td class="center "><a href="taskList.html" class="btn btn-success btn-xs edit"><i class="fa fa-share"></i>开会记录</a></td>
-                                    <td>
-                                        <a href="planList.html" class="btn btn-primary btn-xs more"><i class="fa fa-share"></i>计划详情 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td class="scrollNav"><a  href="#pingjia" class="btn btn-success btn-xs commetD"><i class="fa fa-share"></i>评价详情</a></td>
-                                    <td class="center "><a href="taskList.html" class="btn btn-success btn-xs edit"><i class="fa fa-share"></i>开会记录</a></td>
-                                    <td>
-                                        <a href="planList.html" class="btn btn-primary btn-xs more"><i class="fa fa-share"></i>计划详情 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td class="scrollNav"><a  href="#pingjia" class="btn btn-success btn-xs commetD"><i class="fa fa-share"></i>评价详情</a></td>
-                                    <td class="center "><a href="taskList.html" class="btn btn-success btn-xs edit"><i class="fa fa-share"></i>开会记录</a></td>
-                                    <td>
-                                        <a href="planList.html" class="btn btn-primary btn-xs more"><i class="fa fa-share"></i>计划详情 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td class="scrollNav"><a  href="#pingjia" class="btn btn-success btn-xs commetD"><i class="fa fa-share"></i>评价详情</a></td>
-                                    <td class="center "><a href="taskList.html" class="btn btn-success btn-xs edit"><i class="fa fa-share"></i>开会记录</a></td>
-                                    <td>
-                                        <a href="planList.html" class="btn btn-primary btn-xs more"><i class="fa fa-share"></i>计划详情 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td class="scrollNav"><a  href="#pingjia" class="btn btn-success btn-xs commetD"><i class="fa fa-share"></i>评价详情</a></td>
-                                    <td class="center "><a href="taskList.html" class="btn btn-success btn-xs edit"><i class="fa fa-share"></i>开会记录</a></td>
-                                    <td>
-                                        <a href="planList.html" class="btn btn-primary btn-xs more"><i class="fa fa-share"></i>计划详情 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td class="scrollNav"><a  href="#pingjia" class="btn btn-success btn-xs commetD"><i class="fa fa-share"></i>评价详情</a></td>
-                                    <td class="center "><a href="taskList.html" class="btn btn-success btn-xs edit"><i class="fa fa-share"></i>开会记录</a></td>
-                                    <td>
-                                        <a href="planList.html" class="btn btn-primary btn-xs more"><i class="fa fa-share"></i>计划详情 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td class="scrollNav"><a  href="#pingjia" class="btn btn-success btn-xs commetD"><i class="fa fa-share"></i>评价详情</a></td>
-                                    <td class="center "><a href="taskList.html" class="btn btn-success btn-xs edit"><i class="fa fa-share"></i>开会记录</a></td>
-                                    <td>
-                                        <a href="planList.html" class="btn btn-primary btn-xs more"><i class="fa fa-share"></i>计划详情 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td class="scrollNav"><a  href="#pingjia" class="btn btn-success btn-xs commetD"><i class="fa fa-share"></i>评价详情</a></td>
-                                    <td class="center "><a href="taskList.html" class="btn btn-success btn-xs edit"><i class="fa fa-share"></i>开会记录</a></td>
-                                    <td>
-                                        <a href="planList.html" class="btn btn-primary btn-xs more"><i class="fa fa-share"></i>计划详情 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td class="scrollNav"><a  href="#pingjia" class="btn btn-success btn-xs commetD"><i class="fa fa-share"></i>评价详情</a></td>
-                                    <td class="center "><a href="taskList.html" class="btn btn-success btn-xs edit"><i class="fa fa-share"></i>开会记录</a></td>
-                                    <td>
-                                        <a href="planList.html" class="btn btn-primary btn-xs more"><i class="fa fa-share"></i>计划详情 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td class="scrollNav"><a  href="#pingjia" class="btn btn-success btn-xs commetD"><i class="fa fa-share"></i>评价详情</a></td>
-                                    <td class="center "><a href="taskList.html" class="btn btn-success btn-xs edit"><i class="fa fa-share"></i>开会记录</a></td>
-                                    <td>
-                                        <a href="planList.html" class="btn btn-primary btn-xs more"><i class="fa fa-share"></i>计划详情 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td class="scrollNav"><a  href="#pingjia" class="btn btn-success btn-xs commetD"><i class="fa fa-share"></i>评价详情</a></td>
-                                    <td class="center "><a href="taskList.html" class="btn btn-success btn-xs edit"><i class="fa fa-share"></i>开会记录</a></td>
-                                    <td>
-                                        <a href="planList.html" class="btn btn-primary btn-xs more"><i class="fa fa-share"></i>计划详情 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td class="scrollNav"><a  href="#pingjia" class="btn btn-success btn-xs commetD"><i class="fa fa-share"></i>评价详情</a></td>
-                                    <td class="center "><a href="taskList.html" class="btn btn-success btn-xs edit"><i class="fa fa-share"></i>开会记录</a></td>
-                                    <td>
-                                        <a href="planList.html" class="btn btn-primary btn-xs more"><i class="fa fa-share"></i>计划详情 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td class="scrollNav"><a  href="#pingjia" class="btn btn-success btn-xs commetD"><i class="fa fa-share"></i>评价详情</a></td>
-                                    <td class="center "><a href="taskList.html" class="btn btn-success btn-xs edit"><i class="fa fa-share"></i>开会记录</a></td>
-                                    <td>
-                                        <a href="planList.html" class="btn btn-primary btn-xs more"><i class="fa fa-share"></i>计划详情 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td class="scrollNav"><a  href="#pingjia" class="btn btn-success btn-xs commetD"><i class="fa fa-share"></i>评价详情</a></td>
-                                    <td class="center "><a href="taskList.html" class="btn btn-success btn-xs edit"><i class="fa fa-share"></i>开会记录</a></td>
-                                    <td>
-                                        <a href="planList.html" class="btn btn-primary btn-xs more"><i class="fa fa-share"></i>计划详情 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td class="scrollNav"><a  href="#pingjia" class="btn btn-success btn-xs commetD"><i class="fa fa-share"></i>评价详情</a></td>
-                                    <td class="center "><a href="taskList.html" class="btn btn-success btn-xs edit"><i class="fa fa-share"></i>开会记录</a></td>
-                                    <td>
-                                        <a href="planList.html" class="btn btn-primary btn-xs more"><i class="fa fa-share"></i>计划详情 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td class="scrollNav"><a  href="#pingjia" class="btn btn-success btn-xs commetD"><i class="fa fa-share"></i>评价详情</a></td>
-                                    <td class="center "><a href="taskList.html" class="btn btn-success btn-xs edit"><i class="fa fa-share"></i>开会记录</a></td>
-                                    <td>
-                                        <a href="planList.html" class="btn btn-primary btn-xs more"><i class="fa fa-share"></i>计划详情 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td class="scrollNav"><a  href="#pingjia" class="btn btn-success btn-xs commetD"><i class="fa fa-share"></i>评价详情</a></td>
-                                    <td class="center "><a href="taskList.html" class="btn btn-success btn-xs edit"><i class="fa fa-share"></i>开会记录</a></td>
-                                    <td>
-                                        <a href="planList.html" class="btn btn-primary btn-xs more"><i class="fa fa-share"></i>计划详情 </a>
+                                        <a href="javascript:;" data-mode="" class="btn btn-primary btn-xs more"><i class="fa fa-share"></i>计划详情 </a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -479,6 +281,7 @@ Purchase: http://wrapbootstrap.com
 
 <!--Page Related Scripts-->
 <!--Sparkline Charts Needed Scripts-->
+<script src="../js/jquery.params.js"></script>
 <script src="../lib/sparkline/jquery.sparkline.js"></script>
 <script src="../lib/sparkline/sparkline-init.js"></script>
 <script src="../js/pageNav.js"></script>
