--- a/public/views/taskList.html
+++ b/public/views/taskList.html
@@ -126,236 +126,21 @@ Purchase: http://wrapbootstrap.com
                                     </th>
                                 </tr>
                                 </thead>
-
                                 <tbody>
+                                {{each taskLists as task i}}
                                 <tr>
-                                    <td>误会风</td>
+                                    <td>{{task.name}}</td>
+                                    <td>{{task.xueqi}}</td>
+                                    <td>{{task.start_time}}</td>
+                                    <td>{{task.deadline}}</td>
+                                    <td>{{task.content}}</td>
                                     <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
+                                    <td>{{task.remark}}</td>
                                     <td class="scrollNav">
-                                        <a href="#pingjia" class="btn btn-primary btn-xs editComment"><i class="fa fa-edit"></i>编辑 </a>
+                                        <a href="#pingjia" class="btn btn-primary btn-xs editComment" data-mode="{{task.remark}}"><i class="fa fa-edit"></i>编辑 </a>
                                     </td>
                                 </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td class="scrollNav">
-                                        <a href="#pingjia" class="btn btn-primary btn-xs editComment"><i class="fa fa-edit"></i>编辑 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td class="scrollNav">
-                                        <a href="#pingjia" class="btn btn-primary btn-xs editComment"><i class="fa fa-edit"></i>编辑 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td class="scrollNav">
-                                        <a href="#pingjia" class="btn btn-primary btn-xs editComment"><i class="fa fa-edit"></i>编辑 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td class="scrollNav">
-                                        <a href="#pingjia" class="btn btn-primary btn-xs editComment"><i class="fa fa-edit"></i>编辑 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td class="scrollNav">
-                                        <a href="#pingjia" class="btn btn-primary btn-xs editComment"><i class="fa fa-edit"></i>编辑 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td class="scrollNav">
-                                        <a href="#pingjia" class="btn btn-primary btn-xs editComment"><i class="fa fa-edit"></i>编辑 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td class="scrollNav">
-                                        <a href="#pingjia" class="btn btn-primary btn-xs editComment"><i class="fa fa-edit"></i>编辑 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td class="scrollNav">
-                                        <a href="#pingjia" class="btn btn-primary btn-xs editComment"><i class="fa fa-edit"></i>编辑 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td class="scrollNav">
-                                        <a href="#pingjia" class="btn btn-primary btn-xs editComment"><i class="fa fa-edit"></i>编辑 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td class="scrollNav">
-                                        <a href="#pingjia" class="btn btn-primary btn-xs editComment"><i class="fa fa-edit"></i>编辑 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td class="scrollNav">
-                                        <a href="#pingjia" class="btn btn-primary btn-xs editComment"><i class="fa fa-edit"></i>编辑 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td class="scrollNav">
-                                        <a href="#pingjia" class="btn btn-primary btn-xs editComment"><i class="fa fa-edit"></i>编辑 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td class="scrollNav">
-                                        <a href="#pingjia" class="btn btn-primary btn-xs editComment"><i class="fa fa-edit"></i>编辑 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td class="scrollNav">
-                                        <a href="#pingjia" class="btn btn-primary btn-xs editComment"><i class="fa fa-edit"></i>编辑 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td class="scrollNav">
-                                        <a href="#pingjia" class="btn btn-primary btn-xs editComment"><i class="fa fa-edit"></i>编辑 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td class="scrollNav">
-                                        <a href="#pingjia" class="btn btn-primary btn-xs editComment"><i class="fa fa-edit"></i>编辑 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td class="scrollNav">
-                                        <a href="#pingjia" class="btn btn-primary btn-xs editComment"><i class="fa fa-edit"></i>编辑 </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td class="scrollNav">
-                                        <a href="#pingjia" class="btn btn-primary btn-xs editComment"><i class="fa fa-edit"></i>编辑 </a>
-                                    </td>
-                                </tr>
+                                {{/each}}
                                 <tr>
                                     <td>误会风</td>
                                     <td>131311</td>
@@ -386,7 +171,7 @@ Purchase: http://wrapbootstrap.com
                                 <input type="text" class="form-control input-xl" id="xlginput" placeholder="">
 
                             </div>
-                            <a href="#" class="btn btn-primary btn-block"> 保存 </a>
+                            <a href="javascript:;" id="rate" class="btn btn-primary btn-block"> 保存 </a>
                         </div>
                     </div>
                 </div>
@@ -398,15 +183,18 @@ Purchase: http://wrapbootstrap.com
 </div>
 
 <!--Basic Scripts-->
+
+<script src="../lib/art-template/template.js"></script>
 <script src="../lib/jquery/jquery.min.js"></script>
 <script src="../lib/bootstrap/bootstrap.min.js"></script>
-
+<script src="../js/jquery.params.js"></script>
 <!--Beyond Scripts-->
 <script src="../lib/beyond/beyond.min.js"></script>
 
 
 <!--Page Related Scripts-->
 <!--Sparkline Charts Needed Scripts-->
+
 <script src="../lib/sparkline/jquery.sparkline.js"></script>
 <script src="../lib/sparkline/sparkline-init.js"></script>
 <script src="../js/pageNav.js"></script>
