--- a/public/views/postList.html
+++ b/public/views/postList.html
@@ -103,15 +103,15 @@
 <script id="postList" type="text/html">
     <section style="margin-top: 35px;">
         {{each postLists as post i}}
-        <div class="col-md-8 ">
+        <div class="col-md-8">
             <article class="blog-post">
                 <div class="blog-post-body">
                     <h3>
                         <a href="">{{post.title}}</a>
                     </h3>
                     <div class="post-meta">
-                        <!--<span>by <a href="#">{post.author}</a></span>
-                        /-->
+                        <span>by <a href="#">{{post.profile.name}}</a></span>
+                        /
                         <span><i class="fa fa-clock-o"></i>{{post.created_at}}</span>
                         /
                         <span><i class="fa fa-comment-o"></i> 1</span>
@@ -119,7 +119,7 @@
                     </div>
                     <p>{{post.content}}</p>
                     <!-- <p>最近几年，随着比特币的兴起并不断走高的价格，越来越多的投资者和机构开始对数字货币这一新兴概念产生了兴趣。由比特币创建并使用的区块链技术也获得了从创业公司到金融巨头的广泛关注和参与。</p> -->
-                    <a href="postDetail.html"><button type="button" class="btn btn-success">继续阅读 >></button></a>
+                    <a href="postDetail.html?index={{post.id}}"><button type="button" class="btn btn-success" id="{{post.id}}">继续阅读 >></button></a>
                 </div>
             </article>
         </div>
