文件信息完善

--- a/public/views/resource.html
+++ b/public/views/resource.html
@@ -79,7 +79,12 @@
             <a href="javascript:;" id="uploadfile" class="file pull-right" style="display: none">开始上传
                 <input type="" name="" id="st">
             </a>
+            <div class="form-group">
+                <label for="desinput"><h5>添加介绍</h5></label>
+                <input type="text" class="form-control input-xl" id="desinput" placeholder="">
+            </div>
         </div>
+
     </div>
 
 
